Refactor user interface for IT-HelpDesk application by enhancing navigation, improving layout, and integrating Bootstrap for responsive design. Updated ticket management and knowledge base pages with new styles and components, while removing deprecated files to streamline the codebase.

--- a/Admin It Helpdesk/Home.html
+++ b/Admin It Helpdesk/Home.html
@@ -258,7 +258,7 @@
           <div class="ticket-header">
             <div class="ticket-title">
               <div class="ticket-status status-open">
-                <i class="fas fa-ticket-alt"></i>
+                <i class="fa-duotone fa-solid fa-ticket"></i>
               </div>
               <div>
                 <h4>Product Activation Failed</h4>
