--- a/User It Helpdesk/view-detail.html
+++ b/User It Helpdesk/view-detail.html
@@ -5,293 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IT-HelpDesk - Response & Detail</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      /* Additional User-specific styles */
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f9f9ff;
-      }
-
-      .navbar {
-        background-color: white;
-        padding: 15px 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      }
-
-      .navbar .logo {
-        margin-left: 20px;
-      }
-
-      .navbar .logo a {
-        color: #4682b4;
-        text-decoration: none;
-        font-size: 24px;
-        font-weight: bold;
-      }
-
-      .nav-menu {
-        display: flex;
-        gap: 20px;
-        margin: 0 auto;
-      }
-
-      .nav-menu a {
-        text-decoration: none;
-        color: #555;
-        font-weight: 500;
-        padding: 8px 15px;
-        transition: all 0.3s ease;
-      }
-
-      .nav-menu a:hover,
-      .nav-menu a.active {
-        color: #4682b4;
-        border-bottom: 2px solid #4682b4;
-      }
-
-      .user-section {
-        margin-right: 20px;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-      }
-
-      .user-name {
-        font-weight: bold;
-      }
-
-      .logout-btn {
-        background-color: #f0f0f0;
-        border: 1px solid #ddd;
-        border-radius: 15px;
-        padding: 5px 15px;
-        cursor: pointer;
-      }
-
-      .content-container {
-        display: flex;
-        max-width: 1200px;
-        margin: 30px auto;
-        gap: 30px;
-        padding: 0 20px;
-      }
-
-      .detail-container {
-        flex: 3;
-        background-color: white;
-        border-radius: 10px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        padding: 25px;
-      }
-
-      .sidebar {
-        flex: 1;
-        min-width: 300px;
-      }
-
-      .detail-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 30px;
-      }
-
-      .detail-header h1 {
-        color: #333;
-        font-size: 1.8rem;
-        margin: 0;
-      }
-
-      .detail-actions {
-        display: flex;
-        gap: 15px;
-        margin-bottom: 25px;
-      }
-
-      .back-button {
-        background: none;
-        border: none;
-        color: #4682b4;
-        font-size: 16px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        gap: 5px;
-      }
-
-      .print-button {
-        background: none;
-        border: none;
-        color: #333;
-        font-size: 16px;
-        cursor: pointer;
-      }
-
-      .chat-container {
-        margin-bottom: 30px;
-      }
-
-      .chat-message {
-        margin-bottom: 25px;
-        position: relative;
-        max-width: 70%;
-      }
-
-      .user-message {
-        margin-left: 0;
-        margin-right: auto;
-      }
-
-      .support-message {
-        margin-left: auto;
-        margin-right: 0;
-      }
-
-      .message-content {
-        background-color: #e8eaff;
-        padding: 15px 20px;
-        border-radius: 10px;
-        position: relative;
-      }
-
-      .support-message .message-content {
-        background-color: #4682b4;
-        color: white;
-      }
-
-      .message-time {
-        color: #888;
-        font-size: 12px;
-        text-align: right;
-        margin-top: 5px;
-        padding-right: 10px;
-      }
-
-      .message-actions {
-        position: absolute;
-        right: 10px;
-        top: 5px;
-        color: #777;
-        cursor: pointer;
-      }
-
-      .message-input-container {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        margin-top: 30px;
-        border-top: 1px solid #eee;
-        padding-top: 20px;
-      }
-
-      .message-input {
-        flex: 1;
-        padding: 12px 15px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        outline: none;
-      }
-
-      .message-actions-buttons {
-        display: flex;
-        gap: 10px;
-      }
-
-      .attachment-button {
-        background: none;
-        border: none;
-        color: #777;
-        font-size: 18px;
-        cursor: pointer;
-      }
-
-      .send-button {
-        background-color: #4682b4;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 5px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-      }
-
-      .user-info-card {
-        background-color: white;
-        border-radius: 10px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        padding: 25px;
-        margin-bottom: 25px;
-      }
-
-      .user-info-card h3 {
-        color: #333;
-        font-size: 1.2rem;
-        margin-top: 0;
-        margin-bottom: 15px;
-        border-bottom: 1px solid #eee;
-        padding-bottom: 10px;
-      }
-
-      .user-info-card p {
-        margin: 10px 0;
-        color: #555;
-      }
-
-      .user-info-card .status {
-        display: inline-block;
-        padding: 5px 10px;
-        border-radius: 15px;
-        font-size: 12px;
-        font-weight: bold;
-        margin-top: 10px;
-      }
-
-      .status-progress {
-        background-color: #fff8e1;
-        color: #ffa000;
-      }
-
-      .whatsapp-button {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        background-color: #25d366;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-        text-decoration: none;
-      }
-    </style>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
   </head>
   <body>
     <!-- Navigation Bar -->
-    <div class="navbar">
-      <div class="logo">
-        <a href="index.html">IT-HelpDesk</a>
-      </div>
-      <div class="nav-menu">
-        <a href="index.html">HOME</a>
-        <a href="mytickets.html" class="active">MY PROBLEM</a>
-        <a href="new-problem.html">NEW PROBLEM</a>
-        <a href="knowledge-base.html">KNOWLEDGE BASE</a>
-      </div>
-      <div class="user-section">
-        <span class="user-name">JOHN DOE</span>
-        <button class="logout-btn">Logout</button>
-      </div>
-    </div>
+    <div id="navbar-container"></div>
 
     <div class="content-container">
       <div class="detail-container">
@@ -362,8 +87,63 @@
     </div>
 
     <!-- WhatsApp Button -->
-    <a href="#" class="whatsapp-button">
-      <img src="whatsapp-icon.png" alt="WhatsApp" />
-    </a>
+    <div id="whatsapp-container"></div>
+
+    <!-- Bootstrap and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Include components -->
+    <script>
+      // Function to include HTML content from another file
+      function includeHTML(url, callback) {
+        const xhr = new XMLHttpRequest();
+        xhr.open("GET", url, true);
+        xhr.onreadystatechange = function () {
+          if (this.readyState === 4 && this.status === 200) {
+            const parser = new DOMParser();
+            const htmlDoc = parser.parseFromString(
+              this.responseText,
+              "text/html"
+            );
+
+            // Add component elements to body but hidden
+            const components = htmlDoc.querySelectorAll('[id$="-component"]');
+            components.forEach((component) => {
+              const clone = document.importNode(component, true);
+              clone.style.display = "none";
+              document.body.appendChild(clone);
+            });
+
+            // Get the script part
+            const script = htmlDoc.querySelector("script");
+            if (script) {
+              eval(script.innerHTML);
+            }
+
+            // Initialize components after loading
+            if (window.ITHelpdesk && window.ITHelpdesk.includeComponent) {
+              window.ITHelpdesk.includeComponent(
+                "navbar-component",
+                "navbar-container"
+              );
+              window.ITHelpdesk.includeComponent(
+                "whatsapp-component",
+                "whatsapp-container"
+              );
+              window.ITHelpdesk.setActiveNavigation();
+            }
+
+            if (callback) callback();
+          }
+        };
+        xhr.send();
+      }
+
+      // Load components from components-user.html
+      document.addEventListener("DOMContentLoaded", function () {
+        includeHTML("components-user.html");
+      });
+    </script>
   </body>
 </html>
