Add Google Fonts integration and enhance UI components across multiple pages in IT-HelpDesk application. Updated button styles, improved layout for knowledge base articles, and added new content sections for better user experience.

--- a/User It Helpdesk/Home.html
+++ b/User It Helpdesk/Home.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Odor+Mean+Chey&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -26,13 +30,21 @@
           Sistem manajemen tiket untuk menangani masalah teknis dengan cepat dan
           efisien
         </p>
-        <a href="new-problem.html" class="main-button">REPORT A PROBLEM</a>
+        <a
+          href="new-problem.html"
+          class="main-button"
+          style="text-align: left; display: block; width: fit-content"
+          >REPORT A PROBLEM</a
+        >
       </div>
       <div class="hero-stats">
         <div class="profile-pic-container">
           <div class="today-pic">Today's PIC</div>
           <div class="profile-pic">
-            <i class="fa-solid fa-user fa-3x" style="color: #0c416a"></i>
+            <i
+              class="fas fa-user-circle"
+              style="font-size: 80px; color: #ddd"
+            ></i>
           </div>
           <div class="support-text">IT Support</div>
           <div class="support-name">John Newman</div>
