--- a/User It Helpdesk/knowledge-base.html
+++ b/User It Helpdesk/knowledge-base.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Odor+Mean+Chey&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -50,14 +54,14 @@
                 <h3>Software dan Hardware</h3>
                 <p>Perangkat yang diinstall</p>
               </div>
-              <a href="#" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
             </div>
             <div class="kb-article">
               <div class="kb-article-info">
                 <h3>Cara mengenal Lebih Dalam Terkait IT - HelpDesk</h3>
                 <p>Cara membuat Problem Ticket.dll</p>
               </div>
-              <a href="#" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
             </div>
           </div>
         </div>
@@ -66,10 +70,74 @@
       <div class="category-sections">
         <div class="category-section">
           <h2>Software</h2>
+          <div class="kb-articles" style="margin-top: 30px">
+            <div class="kb-article">
+              <div class="kb-article-info">
+                <h3>Cara Install Microsoft Office</h3>
+                <p>Panduan lengkap instalasi Microsoft Office untuk karyawan</p>
+              </div>
+              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+            </div>
+            <div class="kb-article">
+              <div class="kb-article-info">
+                <h3>Menggunakan Software VPN Perusahaan</h3>
+                <p>
+                  Langkah-langkah mengakses jaringan perusahaan dari jarak jauh
+                </p>
+              </div>
+              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+            </div>
+            <div class="kb-article">
+              <div class="kb-article-info">
+                <h3>Mengatasi Error pada Aplikasi Internal</h3>
+                <p>Solusi untuk masalah umum pada software perusahaan</p>
+              </div>
+              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+            </div>
+            <div class="kb-article">
+              <div class="kb-article-info">
+                <h3>Update Software Wajib</h3>
+                <p>Daftar software yang perlu diupdate secara berkala</p>
+              </div>
+              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+            </div>
+          </div>
         </div>
 
         <div class="category-section">
           <h2>Hardware</h2>
+          <div class="kb-articles" style="margin-top: 30px">
+            <div class="kb-article">
+              <div class="kb-article-info">
+                <h3>Menghubungkan Perangkat ke Jaringan WiFi</h3>
+                <p>Cara menghubungkan laptop, smartphone, dan perangkat lain</p>
+              </div>
+              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+            </div>
+            <div class="kb-article">
+              <div class="kb-article-info">
+                <h3>Panduan Penggunaan Printer</h3>
+                <p>
+                  Cara menggunakan printer kantor dan mengatasi masalah umum
+                </p>
+              </div>
+              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+            </div>
+            <div class="kb-article">
+              <div class="kb-article-info">
+                <h3>Pengaturan Proyektor Ruang Meeting</h3>
+                <p>Langkah-langkah menggunakan proyektor di ruang rapat</p>
+              </div>
+              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+            </div>
+            <div class="kb-article">
+              <div class="kb-article-info">
+                <h3>Perawatan Laptop Perusahaan</h3>
+                <p>Tips merawat perangkat kerja agar tetap optimal</p>
+              </div>
+              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
