--- a/User It Helpdesk/mytickets.html
+++ b/User It Helpdesk/mytickets.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Odor+Mean+Chey&display=swap"
+      rel="stylesheet"
+    />
     <style>
       /* Make ticket list wider */
       .ticket-list-section {
@@ -62,8 +66,7 @@
       .summary-status-counts {
         display: flex;
         justify-content: center;
-        flex-wrap: wrap;
-        gap: 10px;
+        gap: 20px;
         margin: 0 auto;
       }
 
@@ -129,6 +132,13 @@
         max-width: 600px;
       }
 
+      /* Add left alignment for the button */
+      #report-button {
+        display: inline-block;
+        text-align: center;
+        margin-top: 10px;
+      }
+
       /* Tutorial Section Styles - Removed since they are now in global CSS */
     </style>
   </head>
@@ -145,7 +155,11 @@
           status terkini, riwayat komunikasi, dan tindak lanjut dari tim IT
           Support.
         </p>
-        <a href="new-problem.html" class="main-button" id="report-button"
+        <a
+          href="new-problem.html"
+          class="main-button"
+          id="report-button"
+          style="text-align: left; display: block; width: fit-content"
           >Report your problem</a
         >
       </div>
@@ -156,29 +170,33 @@
           <div class="summary-desc">4 Problem Ticket(s) yang dibuat</div>
 
           <div class="summary-status-counts">
-            <div class="status-count">
-              <div class="status-icon open">
-                <i class="fa-duotone fa-solid fa-ticket"></i>
+            <div style="display: flex; flex-direction: column; gap: 10px">
+              <div class="status-count">
+                <div class="status-icon open">
+                  <i class="fa-duotone fa-solid fa-ticket"></i>
+                </div>
+                <div class="count">1</div>
               </div>
-              <div class="count">1</div>
+              <div class="status-count">
+                <div class="status-icon solved">
+                  <i class="fas fa-check"></i>
+                </div>
+                <div class="count">1</div>
+              </div>
             </div>
-            <div class="status-count">
-              <div class="status-icon progress">
-                <i class="fas fa-clock"></i>
+            <div style="display: flex; flex-direction: column; gap: 10px">
+              <div class="status-count">
+                <div class="status-icon progress">
+                  <i class="fas fa-clock"></i>
+                </div>
+                <div class="count">1</div>
               </div>
-              <div class="count">1</div>
-            </div>
-            <div class="status-count">
-              <div class="status-icon solved">
-                <i class="fas fa-check"></i>
+              <div class="status-count">
+                <div class="status-icon expired">
+                  <i class="fa-solid fa-circle-xmark"></i>
+                </div>
+                <div class="count">1</div>
               </div>
-              <div class="count">1</div>
-            </div>
-            <div class="status-count">
-              <div class="status-icon expired">
-                <i class="fa-solid fa-circle-xmark"></i>
-              </div>
-              <div class="count">1</div>
             </div>
           </div>
         </div>
