--- a/User It Helpdesk/ticket-progress.html
+++ b/User It Helpdesk/ticket-progress.html
@@ -17,6 +17,209 @@
       href="https://fonts.googleapis.com/css2?family=Odor+Mean+Chey&display=swap"
       rel="stylesheet"
     />
+    <style>
+      .content-container {
+        display: flex;
+        max-width: 1200px;
+        margin: 30px auto;
+        gap: 30px;
+        padding: 0 20px;
+      }
+
+      .detail-container {
+        flex: 1;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        overflow: hidden;
+        min-height: 600px;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .detail-header {
+        padding: 25px 30px;
+        border-bottom: 1px solid #f0f0f0;
+      }
+
+      .detail-header h1 {
+        font-size: 24px;
+        font-weight: 600;
+        color: #333;
+        margin: 0;
+      }
+
+      .detail-actions {
+        padding: 15px 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid #f0f0f0;
+      }
+
+      .back-button {
+        color: #333;
+        text-decoration: none;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        font-size: 18px;
+      }
+
+      .print-button {
+        background: none;
+        border: none;
+        font-size: 20px;
+        cursor: pointer;
+      }
+
+      .chat-container {
+        flex: 1;
+        padding: 20px 30px;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      .chat-message {
+        display: flex;
+        position: relative;
+        max-width: 80%;
+        padding: 15px 20px;
+        border-radius: 10px;
+      }
+
+      .user-message {
+        align-self: flex-start;
+        background-color: #f5f5f5;
+      }
+
+      .support-message {
+        align-self: flex-end;
+        background-color: #4285f4;
+        color: white;
+      }
+
+      .message-content p {
+        margin: 0;
+        line-height: 1.5;
+      }
+
+      .message-time {
+        position: absolute;
+        bottom: -20px;
+        right: 10px;
+        font-size: 12px;
+        color: #999;
+      }
+
+      .support-message .message-time {
+        color: #ccc;
+      }
+
+      .message-actions {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
+        font-size: 16px;
+        opacity: 0.5;
+      }
+
+      .message-actions:hover {
+        opacity: 1;
+      }
+
+      .message-input-container {
+        padding: 20px 30px;
+        border-top: 1px solid #f0f0f0;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .message-input {
+        flex: 1;
+        padding: 12px 15px;
+        border: 1px solid #e0e0e0;
+        border-radius: 5px;
+        font-size: 14px;
+      }
+
+      .message-actions-buttons {
+        display: flex;
+        gap: 10px;
+      }
+
+      .attachment-button {
+        background: none;
+        border: none;
+        font-size: 18px;
+        cursor: pointer;
+      }
+
+      .send-button {
+        background-color: #4285f4;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        padding: 8px 15px;
+        font-size: 14px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+      }
+
+      .sidebar {
+        width: 350px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      .user-info-card {
+        background-color: white;
+        border-radius: 10px;
+        padding: 25px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      }
+
+      .user-info-card h3 {
+        color: #333;
+        font-size: 18px;
+        font-weight: 600;
+        margin-bottom: 15px;
+        border-bottom: 1px solid #f0f0f0;
+        padding-bottom: 10px;
+      }
+
+      .user-info-card p {
+        margin-bottom: 8px;
+        font-size: 14px;
+        color: #555;
+      }
+
+      .status {
+        padding: 8px 12px;
+        border-radius: 5px;
+        display: inline-block;
+        font-size: 13px;
+        font-weight: 500;
+        margin-top: 10px;
+      }
+
+      .status-progress {
+        background-color: #fff8e1;
+        color: #ffc107;
+      }
+
+      .status-solved {
+        background-color: #e8f5e9;
+        color: #4caf50;
+      }
+    </style>
   </head>
   <body>
     <!-- Navigation Bar -->
