--- a/Admin It Helpdesk/newProblemTicket.html
+++ b/Admin It Helpdesk/newProblemTicket.html
@@ -99,164 +99,15 @@
     </style>
   </head>
   <body>
-    <!-- Header -->
-    <header class="header">
-      <h1>IT-HelpDesk</h1>
-      <div class="user-profile">
-        <span>JOHN NEWMAN</span>
-        <button class="logout-btn">
-          <i class="fas fa-sign-out-alt me-1"></i>Logout
-        </button>
-      </div>
-    </header>
+    <!-- Header container -->
+    <div id="header-container"></div>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <ul class="nav flex-column">
-        <li class="nav-item">
-          <a class="nav-link" href="Home.html"
-            ><i class="fas fa-home"></i> Home</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="myTicket(s).html"
-            ><i class="fas fa-ticket-alt"></i> My Tickets</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="knowledgeBase.html"
-            ><i class="fas fa-book"></i> Knowledge Base</a
-          >
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#">
-            <i class="fas fa-cog"></i> Admin Menu
-            <i class="fas fa-angle-down ms-auto"></i>
-          </a>
-          <ul class="submenu-sidebar">
-            <li>
-              <a href="admin-article.html"
-                ><i class="far fa-file-alt"></i> Article</a
-              >
-            </li>
-            <li>
-              <a href="admin-category.html"
-                ><i class="fas fa-tags"></i> Category</a
-              >
-            </li>
-            <li>
-              <a href="admin-ticket.html"
-                ><i class="fas fa-ticket-alt"></i> Ticket</a
-              >
-            </li>
-            <li>
-              <a href="admin-user.html"><i class="fas fa-user"></i> User</a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#">
-            <i class="fas fa-chart-bar"></i> Statistic
-            <i class="fas fa-angle-down ms-auto"></i>
-          </a>
-          <ul class="submenu-sidebar">
-            <li>
-              <a href="datastudio-statistics.html"
-                ><i class="fas fa-tachometer-alt"></i> Datastudio Statistic</a
-              >
-            </li>
-            <li>
-              <a href="all-statistics.html"
-                ><i class="fas fa-chart-pie"></i> All Statistic</a
-              >
-            </li>
-            <li class="dropdown-submenu">
-              <a href="#"><i class="fas fa-filter"></i> Details By</a>
-              <ul class="sub-submenu">
-                <li>
-                  <a href="statistics-year.html"
-                    ><i class="fas fa-calendar-year"></i> This Year</a
-                  >
-                </li>
-                <li>
-                  <a href="statistics-categories.html"
-                    ><i class="fas fa-tags"></i> Problem Categories</a
-                  >
-                </li>
-                <li>
-                  <a href="statistics-departments.html"
-                    ><i class="fas fa-building"></i> Departments</a
-                  >
-                </li>
-                <li>
-                  <a href="statistics-staff.html"
-                    ><i class="fas fa-users"></i> IT Staff</a
-                  >
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="serverMonitoring.html"
-            ><i class="fas fa-server"></i> Server Monitoring</a
-          >
-        </li>
-      </ul>
-
-      <!-- Today's PIC -->
-      <div class="todays-pic mt-4 mx-3">
-        <h6>Today's PIC</h6>
-        <div class="pic-avatar">
-          <i class="fas fa-user fa-4x text-secondary"></i>
-        </div>
-        <div class="text-center mb-2">
-          <div>IT Support</div>
-          <div><strong>John Newman</strong></div>
-        </div>
-        <div class="text-start">
-          <div class="mb-1">On progress Ticket(s):</div>
-          <div class="mb-1">Solved Ticket(s):</div>
-          <div class="mb-1">Total Ticket(s):</div>
-          <div class="mt-2">No. HP/CUG</div>
-        </div>
-        <button class="check-in-btn">CHECK IN</button>
-      </div>
-    </div>
+    <!-- Sidebar container -->
+    <div id="sidebar-container"></div>
 
     <!-- Main Content -->
     <div class="main-content">
       <h2 class="mb-4">New Problem Ticket</h2>
-
-      <!-- Success Alert (Hidden by default) -->
-      <div
-        id="success-alert"
-        class="alert alert-success alert-dismissible fade show mb-4 d-none"
-        role="alert"
-        style="border-radius: 15px; border-left: 4px solid #28a745"
-      >
-        <div class="d-flex align-items-center">
-          <div
-            class="bg-success text-white rounded-circle d-flex align-items-center justify-content-center me-3"
-            style="width: 36px; height: 36px"
-          >
-            <i class="fas fa-check"></i>
-          </div>
-          <div>
-            <strong>Pesan Dikirim</strong>
-            <p class="mb-0">
-              Pesan Anda telah terkirim. Kami akan segera menghubungi Anda
-              kembali.
-            </p>
-          </div>
-        </div>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="alert"
-          aria-label="Close"
-        ></button>
-      </div>
 
       <!-- Problem Ticket Form -->
       <div class="bg-white p-4 rounded shadow-sm">
@@ -616,6 +467,7 @@
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="utils.js"></script>
     <script>
       // Auto-fill the date field with current date
       document.addEventListener("DOMContentLoaded", function () {
@@ -752,16 +604,12 @@
             return;
           }
 
-          // Success message
-          Swal.fire({
-            icon: "success",
-            title: "Success!",
-            text: "Your problem ticket has been submitted successfully",
-          }).then(() => {
-            // Reset form after successful submission
-            form.reset();
-            detailsFields.style.display = "none";
-          });
+          // Store notification flag for My Tickets page
+          localStorage.setItem('showTicketNotification', 'true');
+          localStorage.setItem('ticketNotificationMessage', 'Problem ticket has been successfully submitted.');
+          
+          // Redirect to My Tickets page
+          window.location.href = 'myTicket(s).html';
         });
       });
     </script>
